dashboard, a key api clima

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,5 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+  <div class="container">
+    <span class="navbar-brand">Clima</span>
+  </div>
+</nav>
