--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,27 @@
-<p>dashboard works!</p>
+<div class="container pt-4">
+  <div class="row">
+    <div class="col-lg-4">
+      <img [src]="imgUrl" alt="" width="300px" height="300px" />
+    </div>
+    <div class="col-lg-6">
+      <input
+        type="text"
+        class="form-control form-control-lg"
+        placeholder="Obtener Clima"
+        [(ngModel)]="ciudad"
+      />
+      <button
+        class="btn btn-primary btn-lg btn-block mt-4"
+        [disabled]="ciudad == ''"
+        (click)="obtenerClima()"
+      >
+        Obtener Clima
+      </button>
+      <div class="card mt-3">
+        <p><b>Temperatura: </b>27</p>
+        <p><b>Humedad:</b>27</p>
+        <p><b>Clima:</b>27</p>
+      </div>
+    </div>
+  </div>
+</div>
