--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,6 @@
+<div class="alert alert-dismissible alert-danger">
+  <strong>Error al Obtener el Clima!</strong>
+</div>
 <div class="container pt-4">
   <div class="row">
     <div class="col-lg-4">
