--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
-<div class="alert alert-dismissible alert-danger">
-  <strong>Error al Obtener el Clima!</strong>
+<div class="alert alert-dismissible alert-danger" *ngIf="mostrarError">
+  <div class="text-center">
+    <strong>{{ errormessage }}</strong>
+  </div>
 </div>
 <div class="container pt-4">
   <div class="row">
@@ -33,7 +35,7 @@
       </div>
 
       <div class="card mt-3" *ngIf="query">
-        <p><b>Temperatura: </b>{{ temperatura }} Grados Celcius</p>
+        <p><b>Temperatura: </b>{{ temperatura }} ºC</p>
         <p><b>Humedad:</b>{{ humedad }}</p>
         <p><b>Clima:</b>{{ clima }}</p>
       </div>
