--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -35,7 +35,7 @@
       </div>
 
       <div class="card mt-3" *ngIf="query">
-        <p><b>Temperatura: </b>{{ temperatura }} ºC</p>
+        <p><b>Temperatura: </b>{{ temperatura | number : "1.2-2" }} ºC</p>
         <p><b>Humedad:</b>{{ humedad }}</p>
         <p><b>Clima:</b>{{ clima }}</p>
       </div>
